<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:background="#FFFFFF"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"    
    android:orientation="vertical" >
<ScrollView
    android:layout_width="fill_parent"
    android:layout_height="fill_parent" 
        >
<LinearLayout
    android:layout_width="fill_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical" >

    <ImageView
        android:id="@+id/imageView1"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="20dip" 
        android:layout_weight="1"
        android:src="@drawable/bg"
        android:contentDescription="@string/desc" />
    

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="10dip"
        android:layout_marginRight="10dip"
        android:paddingTop="15dip"
        android:paddingBottom="30dip"
        android:layout_weight="2"
        android:orientation="vertical" >

        <TextView
            android:id="@+id/login"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="5dip"
            android:textColor = "#000000"
            android:text="@string/loginname"
            android:textSize="18sp" />

        <EditText
            android:id="@+id/userEditText"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="left"
            android:inputType="text"
            android:ems="10"
            android:clickable="true"
            android:layout_marginBottom="5dip"
            android:hint="@string/sign_name"
            android:background="@drawable/edittext" >

            <requestFocus android:layout_width="match_parent" />
        </EditText>

        <TextView
            android:id="@+id/psw"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="5dip"
            android:textColor = "#000000"
            android:text="@string/password"
            android:textSize="18sp" />

        <EditText
            android:id="@+id/pwdEditText"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:ems="10"
            android:inputType="textPassword"
            android:hint="@string/sign_psw"
            android:clickable="true"
            android:background="@drawable/edittext" />

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="15dip"
            android:orientation = "horizontal" >

            <Button
                android:id="@+id/signButton"
                android:layout_marginTop="5dip"
                android:layout_marginLeft="20dip"
                android:layout_marginRight="7.5dip"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/sign"
                android:textColor = "#ffffff"
                android:textSize="20sp"
                android:background="@drawable/signselector" />

            <Button
                android:id="@+id/loginButton"
                android:layout_height="wrap_content"
                android:layout_marginLeft="7.5dip"
                android:layout_marginRight="20dip"
                android:layout_marginTop="5dip"
                android:layout_weight="1"
                android:background="@drawable/loginselector"
                android:text="@string/login"
                android:textColor="#ffffff"
                android:textSize="20sp" />

        </TableRow>
        
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="10dip"
            android:layout_marginRight="10dip"
            android:paddingTop="15dip"
            android:paddingBottom="20dip"
            android:layout_weight="0.5"
            android:orientation="vertical" >

            <TextView
                android:id="@+id/textView2"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginBottom="5dip"
                android:text="@string/more"
                android:textSize="18sp"
                android:textColor = "#000000"
                 />

            <RelativeLayout
                android:id="@+id/absys"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@drawable/more_top_bg"
                android:clickable="true" >

                <ImageView
                    android:id="@+id/imageView2"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_alignParentRight="true"
                    android:layout_centerVertical="true"
                    android:layout_marginRight="15dip"
                    android:src="@drawable/messages_card_arrow"
                    android:contentDescription="@string/desc" />

                <TextView
                    android:id="@+id/textView1"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_alignParentLeft="true"
                    android:layout_centerVertical="true"
                    android:layout_marginLeft="15dip"
                    android:text="@string/aboutSYS"
                    android:textSize="15sp"
                    android:textColor = "#000000" />

            </RelativeLayout>
           
            <RelativeLayout
                android:id="@+id/abgis"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@drawable/more_bottom_bg"
                android:clickable="true"  >

                <ImageView
                    android:id="@+id/imageView3"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_alignParentRight="true"
                    android:layout_centerVertical="true"
                    android:layout_marginRight="15dip"
                    android:src="@drawable/messages_card_arrow"
                    android:contentDescription="@string/desc" />

                <TextView
                    android:id="@+id/textView3"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_alignParentLeft="true"
                    android:layout_centerVertical="true"
                    android:layout_marginLeft="15dip"
                    android:text="@string/aboutGIS"
                    android:textSize="15sp"
                    android:textColor = "#000000"  />


            </RelativeLayout>

        </LinearLayout>
   </LinearLayout>  
 </ScrollView>   

</LinearLayout>
