<?xml version="1.0" encoding="utf-8"?>  
<RelativeLayout
    android:layout_width="fill_parent"   
    android:layout_height="wrap_content"   
    xmlns:android="http://schemas.android.com/apk/res/android"  
    android:paddingLeft="5dip"  
    android:paddingRight="10dip"
    android:paddingBottom="10dip"
    android:background="#E0EEEE"
    >

    <ImageView
        android:id="@+id/img"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_centerVertical="true"
        android:layout_marginTop="20dip"
        android:contentDescription="@string/desc"
        android:src="@drawable/order" />

    <TextView
        android:id="@+id/ItemTitle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerVertical="true"
        android:layout_marginLeft="5dip"
        android:layout_toRightOf="@+id/img"
        android:text="@string/title" />

    <TextView
        android:id="@+id/ItemText"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerVertical="true"
        android:layout_marginLeft="10dip"
        android:layout_toRightOf="@+id/ItemTitle"
        android:text="@string/contents" />
    
    <TextView
        android:id="@+id/ItemText2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerVertical="true"
        android:layout_marginLeft="10dip"
        android:layout_toRightOf="@+id/ItemText"
        android:text="@string/price" />

    <ImageView
        android:id="@+id/imageView1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentRight="true"
        android:layout_centerVertical="true"
        android:contentDescription="@string/desc"
        android:src="@drawable/messages_card_arrow" />

      <Button
        android:id="@+id/del"
        android:layout_width="wrap_content"
        android:singleLine="true"
        android:layout_height="wrap_content"       
        android:gravity="center_vertical"
        android:layout_gravity="center_vertical"
        android:layout_centerVertical="true"
        android:layout_alignParentRight="true"
        android:paddingLeft="8dip"
        android:paddingRight="8dip"       
        android:textColor="#ffffff"
        android:background="@drawable/del_selector"
        android:text="删除"
        android:visibility="gone"
         />
    
</RelativeLayout>    